added the deployment script to package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spotify-clone",
   "version": "0.1.0",
+  "homepage": "https://spotify-clone.jigg.win/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "dep": "git push && npm run build && echo spotify-clone.jigg.win > build/CNAME && npm run deploy"
   },
   "eslintConfig": {
     "extends": [
